# rmcs-api-client

./: .gitignore  Cargo.toml  README.md  example.env
python/: pyproject.toml
python/src/rmcs_api_client/auth/: __init__.py  api.py  auth.py  profile.py  role.py  token.py  user.py
python/src/rmcs_api_client/resource/: __init__.py  buffer.py  common.py  data.py  device.py  group.py  log.py  model.py  set.py  slice.py  types.py
python/tests/: test_auth.py  test_resource.py  test_secured.py  utility.py
rust/: Cargo.toml
rust/src/auth/: api.rs  auth.rs  mod.rs  profile.rs  role.rs  token.rs  user.rs
rust/src/resource/: buffer.rs  data.rs  device.rs  group.rs  log.rs  mod.rs  model.rs  set.rs  slice.rs  types.rs
rust/src/utility/: mod.rs
rust/tests/: test.rs
src/: lib.rs
src/auth/: api.rs  auth.rs  mod.rs  role.rs  token.rs  user.rs
src/resource/: buffer.rs  data.rs  device.rs  group.rs  log.rs  mod.rs  model.rs  slice.rs  types.rs
src/utility/: mod.rs  test.rs
tests/: test.rs
web/: index.js  package.json  rollup.config.mjs
web/src/: index.js  utility.js
web/src/auth/: api.js  auth.js  index.js  profile.js  role.js  token.js  user.js
web/src/resource/: buffer.js  common.js  data.js  device.js  group.js  index.js  log.js  model.js  set.js  slice.js  types.js
web/tests/: SpecRunner.html
web/tests/spec/: AuthSpecs.js  ResourceSpecs.js
