[package]
name = "rmcs-api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcs-auth-api = { path = "../rmcs-auth-api/rust" }
rmcs-resource-api = { path = "../rmcs-resource-api/rust" }
rmcs-resource-db = { path = "../rmcs-resource-db" }
prost = "0.11.9"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
tonic-reflection = "0.9.2"
dotenvy = "0.15.7"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "iana-time-zone", "oldtime", "std"] }
rand = "0.8.5"
serde = "1.0.164"
rsa = "0.9.2"
jsonwebtoken = { version = "8.3.0", default-features = false }
