[package]
name = "rmcs-api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcs-auth-api = { path = "../rmcs-auth-api/rust" }
rmcs-auth-db = { path = "../rmcs-auth-db" }
rmcs-resource-api = { path = "../rmcs-resource-api/rust" }
rmcs-resource-db = { path = "../rmcs-resource-db" }
prost = "0.11.9"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
tonic-reflection = "0.9.2"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "iana-time-zone", "oldtime", "std"] }
uuid ={ version = "1.4.0", features = ["v4"] }
rand = "0.8.5"
serde = "1.0.164"
rsa = "0.9.2"
pkcs8 = "0.10.2"
spki = "0.7.2"
jsonwebtoken = { version = "8.3.0", default-features = false }

[dev-dependencies]
dotenvy = "0.15.7"
argon2 = "0.5.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
