[package]
name = "rmcs-api-client"
version = "0.2.0"
edition = "2021"

[dependencies]
rmcs-auth-api = { path = "../rmcs-auth-api/rust" }
rmcs-auth-db = { path = "../rmcs-auth-db" }
rmcs-resource-api = { path = "../rmcs-resource-api/rust" }
rmcs-resource-db = { path = "../rmcs-resource-db" }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11.9"
tonic = "0.9.2"
tonic-reflection = "0.9.2"
dotenvy = "0.15.7"
chrono = { version = "0.4.26", default-features = false, features = ["clock", "iana-time-zone", "oldtime", "std"] }
uuid ={ version = "1.4.1", features = ["v4"] }
rand = "0.8.5"
serde = "1.0.183"
rsa = "0.9.2"
pkcs8 = "0.10.2"
spki = "0.7.2"
jsonwebtoken = { version = "8.3.0", default-features = false }

[dev-dependencies]
argon2 = "0.5.1"
