[package]
name = "rmcs-api-client"
version = "0.4.0"
edition = "2024"

[dependencies]
rmcs-auth-api = { path = "../../rmcs-auth-api/rust" }
rmcs-auth-db = { path = "../../rmcs-auth-db" }
rmcs-resource-api = { path = "../../rmcs-resource-api/rust" }
rmcs-resource-db = { path = "../../rmcs-resource-db" }
rmcs-api-server = { path = "../../rmcs-api-server" }
tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros"] }
prost = "0.13.5"
tonic = "0.13.1"
tonic-reflection = "0.13.1"
dotenvy = "0.15.7"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "iana-time-zone", "oldtime", "std"] }
uuid = { version = "1.17.0", features = ["v4"] }
jsonwebtoken = { version = "9.3.1", default-features = false }

[dev-dependencies]
argon2 = "0.5.3"
