[package]
name = "rmcs-api-client"
version = "0.4.0"
edition = "2024"

[dependencies]
rmcs-auth-api = { path = "../../rmcs-auth-api/rust" }
rmcs-auth-db = { path = "../../rmcs-auth-db" }
rmcs-resource-api = { path = "../../rmcs-resource-api/rust" }
rmcs-resource-db = { path = "../../rmcs-resource-db" }
rmcs-api-server = { path = "../../rmcs-api-server" }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
prost = "0.14.1"
tonic = "0.14.2"
tonic-reflection = "0.14.2"
dotenvy = "0.15.7"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "iana-time-zone", "oldtime", "std"] }
uuid = { version = "1.18.1", features = ["v4"] }
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }

[dev-dependencies]
argon2 = "0.5.3"
